syntax = "proto3";

option csharp_namespace = "GreeterServiceApp";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc RegisterUser(RegisterRequest) returns (RegisterReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

//сообщение для пользователя
message User {
    string first_name = 1;
    string last_name = 2;
    int32 age = 3;
}

// сообщение для регистрации
message RegisterRequest {
    string first_name = 1;
    string last_name = 2;
    int32 age = 3;
}
//сообщение ответа для регистрации
message RegisterReply {
    string message = 1;
    User user = 2;
}
